fix status banner spacing again

--- a/polaris.shopify.com/src/components/StatusBanner/StatusBanner.module.scss
+++ b/polaris.shopify.com/src/components/StatusBanner/StatusBanner.module.scss
@@ -24,10 +24,13 @@
   h2 {
     margin-top: 0;
     @include heading-3;
+
+    & + p {
+      margin-top: 0;
+    }
   }
 
   p {
     margin-bottom: 0;
-    margin-top: 0;
   }
 }
